--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=mylibrary
-DB_USERNAME=secret
+DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
