--- a/config/composer.json
+++ b/config/composer.json
@@ -8,11 +8,8 @@
         "php": ">=7.0.0",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
-        "laravel/passport": "4.0.*",
         "laravel/tinker": "~1.0",
-        "laravelcollective/html": "^5.4.0",
-        "paragonie/random_compat": "2.*",
-        "tymon/jwt-auth": "1.0.0-rc.1"
+        "laravelcollective/html":"^5.4.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
